add server push config, receipts, and newsletter media
